--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Streaming Account - ASA</title>
   </head>
-  <body>
+  <body class="bg-gray-50 h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
