--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Streaming Account - ASA</title>
+    <title>Admin Streaming Account - ASA.</title>
   </head>
   <body class="bg-gray-50 h-screen">
     <div id="root"></div>
